# SentinelX-OS-Release-Tester

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MILESTONE_20_COMPLETE.md  Makefile  PROGRESS_20.md  PROJECT_100_COMPLETE.md  PROJECT_COMPLETE_OLD.md  QUICKSTART.md  README.md  README_COMPLETE.md  ROADMAP.md  build-all.sh  sx-test
boot/asm/: build.sh  fast_boot.asm
docs/: API.md  INSTALLATION.md  USER_GUIDE_COMPLETE.md  USER_MANUAL.md
iso/: README.md  build-iso.sh
iso/configs/: iso.conf
systemd/: sx-backup.service  sx-backup.timer  sx-monitor.service
tools/: README.md  sx-backup  sx-config  sx-desktop  sx-health-monitor  sx-monitor.py  sx-network-optimizer  sx-performance-tuner  sx-security  sx-test  sx-update
tools/cpp/memory-optimizer/: CMakeLists.txt  Makefile  sx-memopt.cpp
tools/python/: sx-monitor.py
